# grace

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  THIRD_PARTY_LICENSES.md  TODO  TODO.md  a.out  change_name.sh  convert_to_int_pow.py  err.txt  grmhd_shocktube_regression_test.yaml  invoke_build_grace_toolchain.sh  out_compile  profiling.txt  rename_files.py  replace.py  test.cpp  test_loop_shenanigans.cc
.github/: CODEOWNERS
buil-dbg/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  code_modules.h  grace_config.h
cmake/: FindFFTW.cmake  FindGSL.cmake  FindKadath.cmake  FindSCALAPACK.cmake  FindSCICRAY.cmake  FindTwoPunctures.cmake  Findp4est.cmake  check_compiler.cmake  code_modules.cmake  (+14 more)
profiling/: CMakeLists.txt  bm_IO.cpp  bm_flux_computation.cpp  bm_fluxes_config.yaml  bm_ghostzone_copy.cpp
src/: CMakeLists.txt  grace.cpp  thunder.cpp
src/IO/: CMakeLists.txt  cell_output.cpp  hdf5_output copy.cpp  hdf5_output.cpp  hdf5_output_sliced copy.cpp  hdf5_output_sliced.cpp  hdf5_output_sliced_correct.cpp  hdf5_sphere_output.cpp  hdf5_surface_output.cpp  octree_search_class.cpp  output_diagnostics.cpp  scalar_output.cpp  sphere_interpolator.cpp  sphere_output.cpp  spherical_surfaces.cpp  vtk_output.cpp  vtk_output_auxiliaries.cpp  vtk_setup_grid.cpp  vtk_surface_output.cpp  vtk_volume_output.cpp  vtk_volume_output_2D.cpp  vtk_volume_output_3D.cpp  xmf_utilities.cpp
src/IO/diagnostics/: adm_integrals.cpp  apparent_horizon.cpp  black_hole_diagnostics.cpp  co_tracker.cpp  gw_integrals.cpp  outflow_diagnostics.cpp
src/ML/: CMakeLists.txt  device_network.cpp  ml_networks.cpp  ml_runtime_stats.cpp  model_loader.cpp
src/amr/: CMakeLists.txt  amr_functions.cpp  amr_ghosts.cpp  amr_ghosts_construct_buffers.cpp  amr_ghosts_construct_reflux_buffers.cpp  amr_transform_utils.cpp  bc_copy_ghostzones.cpp  bc_fill_physical_ghostzones.cpp  bc_fill_physical_ghostzones.hh  bc_helpers.cpp  bc_iterate.cpp  bc_prolongate_ghostzones.cpp  bc_restrict_ghostzones.cpp  boundary_conditions copy.cpp  boundary_conditions.cpp  connectivity.cpp  coordinates.cpp  forest.cpp  octree_search_class.cpp  regrid.cpp
src/amr/bc_helpers/: CMakeLists.txt  bc_copy_ghostzones.cpp  bc_fill_physical_ghostzones.cpp  bc_helpers.cpp  bc_iterate.cpp  bc_prolongate_ghostzones.cpp  bc_restrict_ghostzones.cpp
src/amr/ghost_helpers/: CMakeLists.txt  iterate_corners.cpp  iterate_edges.cpp  iterate_faces.cpp
src/amr/regrid/: regrid_build_buffers.cpp  regrid_transaction.cpp
src/amr/regrid_helpers/: CMakeLists.txt  evaluate_regrid_criterion.cpp  grid_transfer_operators.cpp  partition_grid.cpp
src/config/: yaml_helpers.cpp
src/coordinates/: CMakeLists.txt  cartesian_coordinate_system.cpp  cell_volume_kernels.cpp  coordinate_systems.cpp  coordinates.cpp  spherical_coordinate_system.cpp
src/coordinates/jacobians/: Jacobians_inverse_phys_sph_2D.cpp  Jacobians_inverse_phys_sph_3D.cpp  Jacobians_inverse_sph_2D.cpp  Jacobians_inverse_sph_3D.cpp  Jacobians_sph_2D.cpp  Jacobians_sph_3D.cpp
src/coordinates/surface_elements/: cell_surfaces_2D.cpp  cell_surfaces_3D.cpp
src/coordinates/volume_elements/: dVol_sph_3D_log_analytic.cpp  vol_sph_3D.cpp_new  vol_sph_3D_log.cpp
src/data_structures/: CMakeLists.txt  variable_indices.cpp  variable_utils.cpp  variables.cpp
src/errors/: CMakeLists.txt  abort.cc  error.cc  warn.cc
src/evolution/: CMakeLists.txt  auxiliaries.cpp  evolve.cpp  find_stable_timestep.cpp  initial_data.cpp  refluxing.cpp
src/healpix/: CMakeLists.txt  api_register.cc  commstack.cc  detectors.cpp  driver_init.cc  driver_integrate.cc  driver_interp.cc  driver_output.cc  driver_paramcheck.cc  healpix.cpp  healpix_sphere.cc  output_utils.cc
src/parallel/: CMakeLists.txt  mpi_wrappers.cc
src/particles/: CMakeLists.txt  particle_advance.cpp  particle_checkpoint.cpp  particle_compact.cpp  particle_distributor.cpp  particle_hdf5_output.cpp  particle_owner_search.cpp  particle_rebalance.cpp  particles_module.cpp
src/physics/: CMakeLists.txt  admbase.cpp  b_field_injection.cpp  bssn.cpp  burgers_equation.cpp  grmhd.cpp  grmhd_B_from_A.cpp  grmhd_shocktube.cpp  import_kadath.cpp  m1.cpp  m1_subexpressions.cpp  scalar_advection.cpp
src/physics/eos/: CMakeLists.txt  c2p.cpp  eos_storage.cpp  read_eos_table.cpp  tabulated_reader_compose.cpp
src/profiling/: CMakeLists.txt  gpu_profiling.cpp
src/system/: CMakeLists.txt  checkpoint_handler.cpp  grace_finalize.cpp  grace_initialize.cpp  nan_check.cpp  print.cpp  runtime_functions.cpp  thunder_finalize.cpp  thunder_initialize.cpp
src/utils/: CMakeLists.txt  device.cpp  lifetime_tracker.cpp  singleton_holder.cc  task_queue.cpp
src/utils/numerics/: global_interpolators.cpp
test/: CMakeLists.txt  a.out  sly_eos_test.txt  test_B_from_Avec.cpp  test_TOV.cpp  test_adm_integrals.cpp  test_ai_c2p.cpp  test_bc.cpp  test_bc_unigrid.cpp  test_bssn.cpp  test_c2p.cpp  test_c2p_kastaun.cpp  test_cartesian_coordinates.cpp  test_checkpoint_roundtrip.cpp  test_connectivities.cc  test_connectivities.cpp  test_coordinates.cpp  test_coordinates_cks.cpp  test_ct_flux_conservation.cpp  test_device_vector.cc  test_edge_interp.cpp  test_edge_variables_prolongation_restriction.cpp  test_eos.cpp  test_errors.cc  test_external_boundaries.cpp  test_fd_correctness.cpp  test_fd_symmetry.cpp  test_flux_reflux.cpp  test_fofc_conservation.cpp  test_forest.cpp  test_grid_interpolator.cpp  test_grid_loops.cpp  test_grmhd_kernels.cpp  test_hdf5_IO.cpp  test_hdf5_IO_sliced.cpp  test_healpix_output.cpp  test_hermite_interp.cpp  test_hermite_polynomial.cpp  test_integration.cpp  test_interpolation_on_shere.cpp  (+29 more)
test/configs/: adm_integrals_test.yaml  basic_config.yaml  basic_config_cks.yaml  bc_test_fmr.yaml  c2p_test_gamma2.yaml  checkpoint_roundtrip_test.yaml  ct_flux_conservation_test.yaml  fofc_conservation_test.yaml  pwpoly_test_config.yaml  regrid_test_cartesian.yaml  scalar_reductions_test.yaml
test/mains/: ai_tests_main.cc  kokkos_tests_main.cc  mpi_tests_main.cc  p4est_tests_main.cc  parser_tests_main.cc
(+1466 files in other folders)
